--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -39,10 +39,12 @@ on:
           https://github.com/check-spelling/check-spelling/blob/v0.0.21/action.yml#L67 for current version.
         required: false
         type: string
+        default: ''
       additional-dictionaries:
         description: Space delimited list of URLs (or `prefix:`+path) to additional word lists
         required: false
         type: string
+        default: ''
       config:
         description: Spelling configuration directory
         required: false
