--- a/.github/actions/spelling/action.yml
+++ b/.github/actions/spelling/action.yml
@@ -27,11 +27,9 @@ inputs:
       JSON map of prefixes for dictionary URLs, "cspell" is necessary. See
       https://github.com/check-spelling/check-spelling/blob/v0.0.21/action.yml#L67 for current version.
     required: false
-    default: ''
   additional-dictionaries:
     description: Space delimited list of URLs (or `prefix:`+path) to additional word lists
     required: false
-    default: ''
   config:
     description: Spelling configuration directory
     required: false
@@ -54,8 +52,11 @@ runs:
       id: merge-dictionary-source-prefixes
       shell: pwsh
       run: |
-        $defaultPrefixes = ConvertFrom-Json '${{ inputs.default-dictionary-source-prefixes }}' -AsHashtable
-        $additionalPrefixes = ConvertFrom-Json '${{ inputs.additional-dictionary-source-prefixes }}' -AsHashtable
+        $defaultPrefixesInput = '${{ inputs.default-dictionary-source-prefixes }}'
+        $additionalPrefixesInput = '${{ inputs.additional-dictionary-source-prefixes }}'
+
+        $defaultPrefixes = $null -eq $defaultPrefixesInput ? @{} : (ConvertFrom-Json $defaultPrefixesInput -AsHashtable)
+        $additionalPrefixes = $null -eq $additionalPrefixesInput ? @{} : (ConvertFrom-Json $additionalPrefixesInput -AsHashtable)
 
         $defaultPrefixes.Keys |
           Where-Object { -not $additionalPrefixes.ContainsKey($PSItem) } |
@@ -67,8 +68,11 @@ runs:
       id: merge-dictionary-lists
       shell: pwsh
       run: |
-        $defaultDictionaries = '${{ inputs.default-dictionaries }}'.Replace("`r", ' ').Replace("`n", ' ').Split(' ', [System.StringSplitOptions]::RemoveEmptyEntries)
-        $additionalDictionaries = '${{ inputs.additional-dictionaries }}'.Replace("`r", ' ').Replace("`n", ' ').Split(' ', [System.StringSplitOptions]::RemoveEmptyEntries)
+        $defaultDictionariesInput = '${{ inputs.default-dictionaries }}'
+        $additionalDictionariesInput = '${{ inputs.additional-dictionaries }}'
+
+        $defaultDictionaries = $null -eq $defaultDictionariesInput ? @() : $defaultDictionariesInput.Replace("`r", ' ').Replace("`n", ' ').Split(' ', [System.StringSplitOptions]::RemoveEmptyEntries)
+        $additionalDictionaries = $null -eq $additionalDictionariesInput ? @() : $additionalDictionariesInput.Replace("`r", ' ').Replace("`n", ' ').Split(' ', [System.StringSplitOptions]::RemoveEmptyEntries)
 
         Set-GitHubOutput -Key 'merged-dictionary-list' -Value (($additionalDictionaries + $defaultDictionaries | Select-Object -Unique) -join ' ')
 
