--- a/.github/workflows/reset-azure-environment.yml
+++ b/.github/workflows/reset-azure-environment.yml
@@ -149,14 +149,21 @@ jobs:
 
       - name: Replace Database
         run: |
-          Copy-AzureWebAppSqlDatabase `
-            -ResourceGroupName ${{ inputs.resource-group-name }} `
-            -WebAppName ${{ inputs.app-name }}  `
-            -SourceSlotName ${{ inputs.source-slot-name }} `
-            -DestinationSlotName ${{ inputs.destination-slot-name }} `
-            -ConnectionStringName ${{ inputs.database-connection-string-name }} `
-            -Force
-
+          try
+          {
+              Copy-AzureWebAppSqlDatabase `
+                  -ResourceGroupName ${{ inputs.resource-group-name }} `
+                  -WebAppName ${{ inputs.app-name }}  `
+                  -SourceSlotName ${{ inputs.source-slot-name }} `
+                  -DestinationSlotName ${{ inputs.destination-slot-name }} `
+                  -ConnectionStringName ${{ inputs.database-connection-string-name }} `
+                  -Force
+          }
+          catch
+          {
+              Write-Error $PSItem
+          }
+          
       - name: Scale Database
         run: |
           Set-AzureWebAppSqlDatabaseServiceObjective `
