--- a/.github/workflows/reset-azure-environment.yml
+++ b/.github/workflows/reset-azure-environment.yml
@@ -161,6 +161,7 @@ jobs:
           }
           catch
           {
+              Write-Output "This is what happened"
               Write-Error $PSItem
           }
           
