--- a/.github/workflows/reset-azure-environment.yml
+++ b/.github/workflows/reset-azure-environment.yml
@@ -134,37 +134,29 @@ jobs:
             -WebAppName ${{ inputs.app-name }} `
             -SlotName ${{ inputs.destination-slot-name }}
 
-      #- name: Replace Media
-      #  run: |
-      #    Set-AzureWebAppStorageContentFromStorage `
-      #      -ResourceGroupName ${{ inputs.resource-group-name }} `
-      #      -WebAppName ${{ inputs.app-name }} `
-      #      -SourceSlotName ${{ inputs.source-slot-name }} `
-      #      -DestinationSlotName ${{ inputs.destination-slot-name }} `
-      #      -ConnectionStringName ${{ inputs.storage-connection-string-name }} `
-      #      -ContainerBlackList ${{ inputs.blob-container-exclude-list }} `
-      #      -ContainerWhiteList ${{ inputs.blob-container-include-list }} `
-      #      -FolderBlackList ${{ inputs.folder-exclude-list }} `
-      #      -FolderWhiteList ${{ inputs.folder-include-list }}
+      - name: Replace Media
+        run: |
+          Set-AzureWebAppStorageContentFromStorage `
+            -ResourceGroupName ${{ inputs.resource-group-name }} `
+            -WebAppName ${{ inputs.app-name }} `
+            -SourceSlotName ${{ inputs.source-slot-name }} `
+            -DestinationSlotName ${{ inputs.destination-slot-name }} `
+            -ConnectionStringName ${{ inputs.storage-connection-string-name }} `
+            -ContainerBlackList ${{ inputs.blob-container-exclude-list }} `
+            -ContainerWhiteList ${{ inputs.blob-container-include-list }} `
+            -FolderBlackList ${{ inputs.folder-exclude-list }} `
+            -FolderWhiteList ${{ inputs.folder-include-list }}
 
       - name: Replace Database
         run: |
-          try
-          {
-              Copy-AzureWebAppSqlDatabase `
-                  -ResourceGroupName ${{ inputs.resource-group-name }} `
-                  -WebAppName ${{ inputs.app-name }}  `
-                  -SourceSlotName ${{ inputs.source-slot-name }} `
-                  -DestinationSlotName ${{ inputs.destination-slot-name }} `
-                  -ConnectionStringName ${{ inputs.database-connection-string-name }} `
-                  -Force
-          }
-          catch
-          {
-              Write-Output "This is what happened"
-              Write-Error $PSItem
-          }
-          
+          Copy-AzureWebAppSqlDatabase `
+            -ResourceGroupName ${{ inputs.resource-group-name }} `
+            -WebAppName ${{ inputs.app-name }}  `
+            -SourceSlotName ${{ inputs.source-slot-name }} `
+            -DestinationSlotName ${{ inputs.destination-slot-name }} `
+            -ConnectionStringName ${{ inputs.database-connection-string-name }} `
+            -Force
+
       - name: Scale Database
         run: |
           Set-AzureWebAppSqlDatabaseServiceObjective `
