Testing workspace path again

--- a/.github/actions/checkout/action.yml
+++ b/.github/actions/checkout/action.yml
@@ -30,3 +30,7 @@ runs:
       with:
         submodules: "recursive"
         token: ${{ env.CHECKOUT_TOKEN }}
+
+    - name: Test workspace path
+      shell: pwsh
+      run: Write-Warning '${{ env.GITHUB_WORKSPACE }}'
