Now correctly testing workspace path throughout the whole process

--- a/.github/actions/spelling/action.yml
+++ b/.github/actions/spelling/action.yml
@@ -42,6 +42,10 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Test workspace path
+      shell: pwsh
+      run: Write-Warning $Env:GITHUB_WORKSPACE
+
     - name: Setup Scripts
       shell: pwsh
       run: |
