--- a/.github/actions/spelling/action.yml
+++ b/.github/actions/spelling/action.yml
@@ -3,6 +3,18 @@ name: Spelling
 description: Checks for spelling errors in files.
 
 inputs:
+  merge-file-excludes:
+    description: >
+      When set to "true", the "excludes.txt" file's contents in Lombiq.GitHub.Actions will be merged into the one in the
+      workspace repository.
+    required: false
+    default: "true"
+  merge-ignore-patterns:
+    description: >
+      When set to "true", the "patterns.txt" file's contents in Lombiq.GitHub.Actions will be merged into the one in the
+      workspace repository.
+    required: false
+    default: "true"
   # When updating check-spelling to a new version, check the release notes or the "dictionary-source-prefixes" parameter
   # of "action.yaml" according to the commit of the release to find out the dictionary version tag and update the
   # default value here and in the spelling workflow.
@@ -48,13 +60,27 @@ runs:
         "${{ github.action_path }}" >> $Env:GITHUB_PATH
         (Resolve-Path "${{ github.action_path }}/../../../Scripts").Path >> $Env:GITHUB_PATH
 
-    - name: Merge "excludes" and "patterns"
+    - name: Merge "patterns.txt"
+      if: inputs.merge-ignore-patterns == 'true'
       shell: pwsh
       run: |
-        $targetPath = Join-Path "$Env:GITHUB_WORKSPACE" '${{ inputs.config }}'
+        $mergeParameters = @{
+          Source = Join-Path '${{ github.action_path }}' 'patterns.txt'
+          Target = Join-Path "$Env:GITHUB_WORKSPACE" '${{ inputs.config }}' 'patterns.txt'
+        }
 
-        Merge-SpellCheckingDictionaryFile -Source (Join-Path '${{ github.action_path }}' 'excludes.txt') -Target (Join-Path $targetPath 'excludes.txt')
-        Merge-SpellCheckingDictionaryFile -Source (Join-Path '${{ github.action_path }}' 'patterns.txt') -Target (Join-Path $targetPath 'patterns.txt')
+        Merge-SpellCheckingDictionaryFile @mergeParameters
+
+    - name: Merge "excludes.txt"
+      if: inputs.merge-file-excludes == 'true'
+      shell: pwsh
+      run: |
+        $mergeParameters = @{
+          Source = Join-Path '${{ github.action_path }}' 'excludes.txt'
+          Target = Join-Path "$Env:GITHUB_WORKSPACE" '${{ inputs.config }}' 'excludes.txt'
+        }
+
+        Merge-SpellCheckingDictionaryFile @mergeParameters
 
     - name: Merge dictionary source prefixes
       id: merge-dictionary-source-prefixes
