--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -15,6 +15,20 @@ on:
         required: false
         type: string
         default: "true"
+      merge-file-excludes:
+        description: >
+          When set to "true", the "excludes.txt" file's contents in Lombiq.GitHub.Actions will be merged into the one in
+          the workspace repository.
+        required: false
+        type: string
+        default: "true"
+      merge-ignore-patterns:
+        description: >
+          When set to "true", the "patterns.txt" file's contents in Lombiq.GitHub.Actions will be merged into the one in
+          the workspace repository.
+        required: false
+        type: string
+        default: "true"
       default-dictionary-source-prefixes:
         description: >
           JSON map of prefixes for dictionary URLs, "cspell" is necessary. See
@@ -78,6 +92,8 @@ jobs:
       - name: Check Spelling
         uses: Lombiq/GitHub-Actions/.github/actions/spelling@issue/OSOE-523
         with:
+          merge-file-excludes: ${{ inputs.merge-file-excludes }}
+          merge-ignore-patterns: ${{ inputs.merge-ignore-patterns }}
           default-dictionary-source-prefixes: ${{ inputs.default-dictionary-source-prefixes }}
           default-dictionaries: ${{ inputs.default-dictionaries }}
           additional-dictionary-source-prefixes: ${{ inputs.additional-dictionary-source-prefixes }}
