--- a/.github/workflows/spelling-this-repo.yml
+++ b/.github/workflows/spelling-this-repo.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   spelling:
     name: Spelling
-    uses: Lombiq/GitHub-Actions/.github/workflows/spelling.yml@issue/OSOE-525
+    uses: Lombiq/GitHub-Actions/.github/workflows/spelling.yml@156e101c7d26ac31b3c5a99873083a3926348353
     with:
-      spell-check-this: Lombiq/GitHub-Actions@issue/OSOE-525
-      spell-check-action: Lombiq/GitHub-Actions/.github/actions/spelling@issue/OSOE-525
+      spell-check-this: Lombiq/GitHub-Actions@156e101c7d26ac31b3c5a99873083a3926348353
+      spell-check-action: Lombiq/GitHub-Actions/.github/actions/spelling@156e101c7d26ac31b3c5a99873083a3926348353
