--- a/.github/workflows/spelling-this-repo.yml
+++ b/.github/workflows/spelling-this-repo.yml
@@ -14,5 +14,4 @@ jobs:
     name: Spelling
     uses: Lombiq/GitHub-Actions/.github/workflows/spelling.yml@156e101c7d26ac31b3c5a99873083a3926348353
     with:
-      spell-check-this: Lombiq/GitHub-Actions@156e101c7d26ac31b3c5a99873083a3926348353
-      spell-check-action: Lombiq/GitHub-Actions/.github/actions/spelling@156e101c7d26ac31b3c5a99873083a3926348353
+      spell-check-this: Lombiq/GitHub-Actions@issue/OSOE-525
