--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -50,11 +50,6 @@ on:
         required: false
         type: string
         default: Lombiq/GitHub-Actions@dev
-      spell-check-action:
-        description: Repository with check spelling action to use, the default from Check Spelling is ''
-        required: false
-        type: string
-        default: Lombiq/GitHub-Actions/.github/actions/spelling@dev
 
 jobs:
   check-spelling:
@@ -81,7 +76,7 @@ jobs:
 
       - name: Check Spelling
         id: check-spelling-action
-        uses: ${{ inputs.spell-check-action }}
+        uses: Lombiq/GitHub-Actions/.github/actions/spelling@issue/OSOE-525
         with:
           dictionary-source-prefixes: ${{ inputs.dictionary-source-prefixes }}
           extra-dictionaries: ${{ inputs.extra-dictionaries }}
@@ -103,7 +98,7 @@ jobs:
     if: always() && needs.check-spelling.outputs.followup && github.event_name == 'pull_request'
     steps:
       - name: Comment (PR)
-        uses: ${{ inputs.spell-check-action }}
+        uses: Lombiq/GitHub-Actions/.github/actions/spelling@issue/OSOE-525
         with:
           dictionary-source-prefixes: ${{ inputs.dictionary-source-prefixes }}
           extra-dictionaries: ${{ inputs.extra-dictionaries }}
