--- a/.github/workflows/validate-pull-request.yml
+++ b/.github/workflows/validate-pull-request.yml
@@ -23,12 +23,12 @@ jobs:
     steps:
       - name: Add Jira Issue Code to Pull Request
         if: github.event_name == 'pull_request' && github.event.action == 'opened' 
-        uses: Lombiq/GitHub-Actions/.github/actions/add-jira-issue-code-to-pull-request@dev
+        uses: Lombiq/GitHub-Actions/.github/actions/add-jira-issue-code-to-pull-request@issue/OSOE-562
         env:
           JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check for Merge Conflict in PR
-        uses: Lombiq/GitHub-Actions/.github/actions/check-merge-conflict@dev
+        uses: Lombiq/GitHub-Actions/.github/actions/check-merge-conflict@issue/OSOE-562
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
