Modify target branch in workflow

--- a/.github/actions/publish-nuget/action.yml
+++ b/.github/actions/publish-nuget/action.yml
@@ -64,13 +64,13 @@ runs:
             if (($version -match '^v?\d+(\.\d+){0,3}-(\w+\.)+\d+\.\w+-\d+$') -or ($version -match '^v?\d+(\.\d+){0,3}$')) {
                 $version = $Env:GITHUB_REF_NAME.Trim().TrimStart("v")
             } else {
-                Write-Output "version number is not in a correct format."
+                Write-Output "Invalid version number! The correct format is vM.N.O or v.M.N.O-alpha.X.[issue-code]."
                 exit 1
             }
         }
         if ($version -eq 'USE_GITHUB_RUN_NUMBER') {
           $tags = git tag |
-            ? { $_ -match '^v?\d+(\.\d+){0,3}$' } |
+            ? { ($_ -match '^v?\d+(\.\d+){0,3}$') -or ($_ -match '^v?\d+(\.\d+){0,3}-(\w+\.)+\d+\.\w+-\d+$') } |
             % { [version]($_.TrimStart("v")) } |
             Sort-Object -Descending
           $current = if ($tags.Count -gt 0) { $tags[0] } else { [version]"0.0.0" }
