Renaming some parameters in the spelling action/workflow

--- a/.github/actions/spelling/action.yml
+++ b/.github/actions/spelling/action.yml
@@ -42,12 +42,14 @@ inputs:
   additional-dictionaries:
     description: Space delimited list of URLs (or `prefix:`+path) to additional word lists
     required: false
-  config:
-    description: Spelling configuration directory
+  configuration-path:
+    description: Relative path to the spell-checking configuration folder.
     required: false
     default: .github/actions/spelling
-  spell-check-this:
-    description: Repository with default configuration to use, the default from Check Spelling is ''.
+  default-configuration-repository:
+    description: >
+      Repository with default configuration to use when the workspace repository doesn't have its own configuration. The
+      default from Check Spelling is ''.
     required: false
     default: Lombiq/GitHub-Actions@issue/OSOE-523
 
@@ -111,11 +113,11 @@ runs:
       # v0.0.21
       uses: check-spelling/check-spelling@d7cd2973c513e84354f9d6cf50a6417a628a78ce
       with:
-        check_file_names: 1
-        config: ${{ inputs.config }}
+        spell_check_this: ${{ inputs.default-configuration-repository }}
+        config: ${{ inputs.configuration-path }}
         dictionary_source_prefixes: ${{ steps.merge-dictionary-source-prefixes.outputs.merged-prefixes }}
-        experimental_apply_changes_via_bot: 0
         extra_dictionaries: ${{ steps.merge-dictionary-lists.outputs.merged-dictionary-list }}
+        check_file_names: 1
         post_comment: 1
-        spell_check_this: ${{ inputs.spell-check-this }}
+        experimental_apply_changes_via_bot: 0
         suppress_push_for_open_pull_request: 1
