--- a/.github/actions/spelling/action.yml
+++ b/.github/actions/spelling/action.yml
@@ -43,11 +43,13 @@ inputs:
     description: Space delimited list of URLs (or `prefix:`+path) to additional word lists
     required: false
   config:
-    description: Spelling configuration directory
+    description: Relative path to the spell-checking configuration folder.
     required: false
     default: .github/actions/spelling
   spell-check-this:
-    description: Repository with default configuration to use, the default from Check Spelling is ''.
+    description: >
+      Repository with default configuration to use when the workspace repository doesn't have its own configuration. The
+      default from Check Spelling is ''.
     required: false
     default: Lombiq/GitHub-Actions@issue/OSOE-523
 
