--- a/.github/workflows/validate-submodule-pull-request.yml
+++ b/.github/workflows/validate-submodule-pull-request.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Assign issue to PR author
         if: github.event_name == 'pull_request' && github.event.action == 'opened'
-        uses: Lombiq/GitHub-Actions/.github/actions/assign-issue-to-pr-author@issue/OSOE-545
+        uses: Lombiq/GitHub-Actions/.github/actions/assign-issue-to-pr-author@dev
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
