--- a/.github/actions/spelling/action.yml
+++ b/.github/actions/spelling/action.yml
@@ -15,6 +15,12 @@ inputs:
       workspace repository.
     required: false
     default: "true"
+  merge-reject-patterns:
+    description: >
+      When set to "true", the "reject.txt" file's contents in Lombiq.GitHub.Actions will be merged into the one in the
+      workspace repository.
+    required: false
+    default: "true"
   # When updating check-spelling to a new version, check the release notes or the "dictionary-source-prefixes" parameter
   # of "action.yaml" according to the commit of the release to find out the dictionary version tag and update the
   # default value here and in the spelling workflow.
@@ -62,6 +68,17 @@ runs:
         "${{ github.action_path }}" >> $Env:GITHUB_PATH
         (Resolve-Path "${{ github.action_path }}/../../../Scripts").Path >> $Env:GITHUB_PATH
 
+    - name: Merge "excludes.txt"
+      if: inputs.merge-file-excludes == 'true'
+      shell: pwsh
+      run: |
+        $mergeParameters = @{
+          Source = Join-Path '${{ github.action_path }}' 'excludes.txt'
+          Target = Join-Path "$Env:GITHUB_WORKSPACE" '${{ inputs.configuration-path }}' 'excludes.txt'
+        }
+
+        Merge-SpellCheckingDictionaryFile @mergeParameters
+
     - name: Merge "patterns.txt"
       if: inputs.merge-ignore-patterns == 'true'
       shell: pwsh
@@ -73,13 +90,13 @@ runs:
 
         Merge-SpellCheckingDictionaryFile @mergeParameters
 
-    - name: Merge "excludes.txt"
-      if: inputs.merge-file-excludes == 'true'
+    - name: Merge "reject.txt"
+      if: inputs.merge-reject-patterns == 'true'
       shell: pwsh
       run: |
         $mergeParameters = @{
-          Source = Join-Path '${{ github.action_path }}' 'excludes.txt'
-          Target = Join-Path "$Env:GITHUB_WORKSPACE" '${{ inputs.configuration-path }}' 'excludes.txt'
+          Source = Join-Path '${{ github.action_path }}' 'reject.txt'
+          Target = Join-Path "$Env:GITHUB_WORKSPACE" '${{ inputs.configuration-path }}' 'reject.txt'
         }
 
         Merge-SpellCheckingDictionaryFile @mergeParameters
