--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -22,17 +22,17 @@ on:
         required: false
         type: string
         default: "true"
+      merge-forbidden-patterns:
+        description: >
+          When set to "true", the "line_forbidden.patterns" file's contents in Lombiq.GitHub.Actions will be merged into
+          the one in the workspace repository.
+        required: false
+        type: string
+        default: "true"
       merge-ignore-patterns:
         description: >
           When set to "true", the "patterns.txt" file's contents in Lombiq.GitHub.Actions will be merged into the one in
           the workspace repository.
-        required: false
-        type: string
-        default: "true"
-      merge-reject-patterns:
-        description: >
-          When set to "true", the "reject.txt" file's contents in Lombiq.GitHub.Actions will be merged into the one in the
-          workspace repository.
         required: false
         type: string
         default: "true"
@@ -71,8 +71,8 @@ on:
         default: .github/actions/spelling
       default-configuration-repository:
         description: >
-          Repository with default configuration to use when the workspace repository doesn't have its own configuration. The
-          default from Check Spelling is ''.
+          Repository with default configuration to use when the workspace repository doesn't have its own configuration.
+          The default from Check Spelling is ''.
         required: false
         type: string
         default: Lombiq/GitHub-Actions@issue/OSOE-523
@@ -102,8 +102,8 @@ jobs:
         uses: Lombiq/GitHub-Actions/.github/actions/spelling@issue/OSOE-523
         with:
           merge-file-excludes: ${{ inputs.merge-file-excludes }}
+          merge-forbidden-patterns: ${{ inputs.merge-forbidden-patterns }}
           merge-ignore-patterns: ${{ inputs.merge-ignore-patterns }}
-          merge-reject-patterns: ${{ inputs.merge-reject-patterns }}
           default-dictionary-source-prefixes: ${{ inputs.default-dictionary-source-prefixes }}
           default-dictionaries: ${{ inputs.default-dictionaries }}
           additional-dictionary-source-prefixes: ${{ inputs.additional-dictionary-source-prefixes }}
